cabal-version:       >=1.10
name:                HitAndBlow
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Goshino
copyright:           Goshino
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable HitAndBlow
  main-is:             Main.hs
  other-modules:       UI
                     , HitAndBlow
  build-depends:       base >=4.12 && <4.13
                     , brick
                     , vty
                     , text
                     , microlens
                     , microlens-th
                     , time
  -- hs-source-dirs:
  ghc-options:         -threaded
  default-language:    Haskell2010
